<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInicial"
    android:background="@color/Blue"
    >

    <TextView
        android:id="@+id/Bemvindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bemvindo"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SearchView
        android:id="@+id/pesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:queryHint="pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bemvindo" />

    <TextView
        android:id="@+id/procurar"
        android:layout_width="395dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/text_procurar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pesquisar" />



    <Button
        android:id="@+id/btAgendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        android:text="AGENDAR"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="25dp"
        android:text="@string/text_academia"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="353dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="117dp"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/img_2"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="199dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="123dp"
        app:srcCompat="@drawable/img_4"
        android:foregroundGravity="center"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="412dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:text="@string/text_avaliaçao"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="568dp" />


</androidx.constraintlayout.widget.ConstraintLayout>